Use display: none for collapsed stops

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,7 @@
   position: absolute;
   clip: rect(0 0 0 0);
 }
+
+.u-hidden {
+  display: none;
+}
